# antiSMI-Bot

./: .dockerignore  Dockerfile  README.md  antiSMIbot.py  docker-compose.yml  pyproject.toml  requirements.txt
imports/: config_db.py  imports.py  phrases.py
scripts/: handlers.py  processors.py  senders.py  time_machine.py
