[tool.poetry]
name = "antismi bot"
version = "0.1.0"
description = ""
authors = ["maxlethal"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
anyio = "^3.7.1"
apscheduler = "^3.10.1"
certifi = "^2023.7.22"
charset-normalizer = "^3.2.0"
exceptiongroup = "^1.1.2"
greenlet = "^2.0.2"
h11 = "^0.14.0"
httpcore = "^0.17.3"
httpx = "^0.24.1"
idna = "^3.4"
joblib = "^1.3.2"
navec = "^0.10.0"
numpy = "^1.25.2"
pandas = "^2.0.3"
psycopg2-binary = "^2.9.7"
pytelegrambotapi = "^4.12.0"
python-dateutil = "^2.8.2"
python-dotenv = "^1.0.0"
pytz = "^2023.3"
requests = "^2.31.0"
schedule = "^1.2.0"
scikit-learn = "^1.3.0"
six = "^1.16.0"
sniffio = "^1.3.0"
sqlalchemy = "^2.0.19"
threadpoolctl = "^3.2.0"
typing-extensions = "^4.7.1"
tzdata = "^2023.3"
tzlocal = "^5.0.1"
urllib3 = "^2.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
